--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
     "parse": "~1.8.0",
-    "parse-server": "~2.2.12"
+    "parse-server": "~2.2.12",
+    "superagent": "^4.1.0"
   },
   "scripts": {
     "start": "node index.js"
