Added parse-dashboard to app

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"express": "~4.11.x",
 		"express-fileupload": "^1.1.1-alpha.2",
 		"firebase": "^5.8.3",
+		"jest": "^24.1.0",
 		"kerberos": "~0.0.x",
 		"morgan": "^1.9.1",
 		"parse": "~1.8.0",
 		"parse-server": "~2.2.12",
+		"parse-dashboard": "",
 		"paynow": "^1.0.3",
 		"superagent": "^4.1.0",
 		"xhr2": "^0.1.4",
