--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"algoliasearch": "^3.32.0",
 		"body-parser": "^1.18.3",
+		"cors": "^2.8.5",
 		"dotenv": "^6.2.0",
 		"express": "~4.11.x",
 		"express-fileupload": "^1.1.1-alpha.2",
@@ -19,8 +20,8 @@
 		"kerberos": "~0.0.x",
 		"morgan": "^1.9.1",
 		"parse": "~1.8.0",
-		"parse-server": "~2.2.12",
 		"parse-dashboard": "",
+		"parse-server": "~2.2.12",
 		"paynow": "^1.0.3",
 		"superagent": "^4.1.0",
 		"xhr2": "^0.1.4",
