--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
+		"@sentry/node": "^4.6.4",
 		"algoliasearch": "^3.32.0",
 		"body-parser": "^1.18.3",
 		"cors": "^2.8.5",
@@ -16,6 +17,7 @@
 		"express": "~4.11.x",
 		"express-fileupload": "^1.1.1-alpha.2",
 		"firebase": "^5.8.3",
+		"googleapis": "^37.2.0",
 		"jest": "^24.1.0",
 		"kerberos": "~0.0.x",
 		"morgan": "^1.9.1",
@@ -23,12 +25,11 @@
 		"parse-dashboard": "",
 		"parse-server": "~2.2.12",
 		"paynow": "^1.0.3",
-		"superagent": "^4.1.0",
-		"xhr2": "^0.1.4",
-		"xmlhttprequest": "^1.8.0",
 		"sentry-node": "^2.3.2",
-		"@sentry/node": "^4.6.4",
-		"twilio": "^3.29.0"
+		"superagent": "^4.1.0",
+		"twilio": "^3.29.0",
+		"xhr2": "^0.1.4",
+		"xmlhttprequest": "^1.8.0"
 	},
 	"scripts": {
 		"start": "node index.js"
